fixed the display bug with collapsed navbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,7 +23,7 @@ body {
 /* Header nav */
 
 #site-navbar {
-  height: 62px;
+  min-height: 62px;
   overflow: hidden;
   position: fixed;
   top: 0;
